--- a/index.html
+++ b/index.html
@@ -274,10 +274,11 @@
    <td class="clickable" onclick="showPopup(this)">Click here</td>
     <td>Click here</td>
   </tr>
-  <tr class="hidden-child level-2 expandable-row" onclick="toggleDetails(this)">
-  <td><span class="toggle-icon">▶</span> &nbsp;&nbsp;India</td>
+ <tr class="hidden-child level-2 expandable-row" onclick="toggleDetails(this)">
+  <td><span class="toggle-icon">▶</span> &nbsp;&nbsp;&nbsp;&nbsp;Live Hindustan</td>
+  <td>India</td>
   <td>All</td>
-  <td colspan="25">Country Data...</td>
+  <td colspan="25"></td>
 </tr>
 <tr class="hidden-child level-3">
   <td>&nbsp;&nbsp;&nbsp;&nbsp;Live Hindustan</td> <!-- Property -->
@@ -297,15 +298,17 @@
   <td>India</td> <!-- Country -->
   <td>DESKTOP</td>   <!-- Platform -->
   <td colspan="24"></td> <!-- Remaining empty cells to maintain table structure -->
-<tr class="hidden-child level-2">
-  <td>&nbsp;&nbsp;United States</td>
+<tr class="hidden-child level-2 expandable-row" onclick="toggleDetails(this)">
+  <td><span class="toggle-icon">▶</span> &nbsp;&nbsp;&nbsp;&nbsp;Live Hindustan</td>
+  <td>US</td>
   <td>All</td>
-  <td colspan="25">Country Data...</td>
+  <td colspan="25"></td>
 </tr>
-<tr class="hidden-child level-2">
-  <td>&nbsp;&nbsp;ROW</td>
+ <tr class="hidden-child level-2 expandable-row" onclick="toggleDetails(this)">
+  <td><span class="toggle-icon">▶</span> &nbsp;&nbsp;&nbsp;&nbsp;Live Hindustan</td>
+  <td>ROW</td>
   <td>All</td>
-  <td colspan="25">Country Data...</td>
+  <td colspan="25"></td>
 </tr>
 </tr>
  
