--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   <td>All</td>
   <td colspan="25"></td>
 </tr>
-<tr class="hidden-child level-3">
+<tr class="hidden-child level-3 expandable-row" onclick="toggleDetails(this)">
   <td>&nbsp;&nbsp;&nbsp;&nbsp;Live Hindustan</td> <!-- Property -->
   <td>India</td> <!-- Country -->
   <td>AMP</td>   <!-- Platform -->
