--- a/index.html
+++ b/index.html
@@ -389,12 +389,30 @@
 
 
 <!-- Blank box below the table -->
-<div style="border: 2px solid black; height: 150px; width: 100%; margin-top: 10px; background-color: white; position: relative;">
+<div style="border: 2px solid black; height: 300px; width: 100%; margin-top: 10px; background-color: white; position: relative; padding: 10px; box-sizing: border-box;">
 
-  <!-- Small box with text inside -->
-  <div style="border: 1px solid black; width: 120px; height: 40px; padding: 5px; position: absolute; top: 10px; left: 10px; background-color: white;">
+  <!-- Dropdown button (top-left corner) -->
+  <div style="position: absolute; top: 10px; left: 10px;">
+    <select>
+      <option>Option 1</option>
+      <option>Option 2</option>
+      <option>Option 3</option>
+    </select>
+  </div>
+
+  <!-- Centered heading text -->
+  <div style="text-align: center; font-size: 24px; font-weight: bold; margin-top: 20px;">
     Sarthi
   </div>
+
+  <!-- Input and Send button at the bottom -->
+  <div style="position: absolute; bottom: 10px; left: 10px; right: 10px; display: flex; gap: 10px;">
+    <input type="text" placeholder="Type your message..." style="flex: 1; padding: 8px; font-size: 16px;" />
+    <button style="padding: 8px 16px; font-size: 16px;">Send</button>
+  </div>
+
+</div>
+
 
 </div>
   </div>
