--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
   <!-- Centered heading text -->
   <div style="text-align: center; font-size: 24px; font-weight: bold; margin-top: 20px;">
-    Sarthi
+    Sarthi <br> <small> Your Data Analyzer </small>
   </div>
 
   <!-- Input and Send button at the bottom -->
