--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
   <!-- Dropdown button (top-left corner) -->
   <div style="position: absolute; top: 10px; left: 10px;">
     <select>
-      <option>Option 1</option>
-      <option>Option 2</option>
+      <option>Genral </option>
+      <option> YuktaOne</option>
       <option>Option 3</option>
     </select>
   </div>
